# hash

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
.github/: FUNDING.yml
PipeSocket/: socketpipe  socketpipe.deps.json
Win32/cryptlib/Release/cryptlib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  cryptlib.lastbuildstate
projects/: gm_hash.sln  gm_hash.vcxproj  gm_hash.vcxproj.filters
source/: gm_hash.cpp  main.cpp
